--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/RomaBakalets/Week2#readme",
   "dependencies": {
+    "connect": "^3.7.0",
     "express": "^4.18.1"
   }
 }
